--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <!--==============================header=================================-->
    	<header>
 	    <div class="main">
-        <h1><a class="logo" href="index.html">4DPA</a></h1>
+        <h1><a class="logo" href="http://4pda.ru/" target="_blank">4DPA</a></h1>
       </div>
     </header>
 
@@ -45,9 +45,10 @@
           </div>
           <div class="p_abs del6 obj obj3 gif_wrap">
             <div class="gif_wrap_inner">
-              <div class="gif">
+              <!-- <div class="gif">
                 Место под ГИФ
-              </div>
+              </div> -->
+              <h3 class="ub bold title2 gif_title">Prestigio MultiPad PMP7880D3G</h3>
             </div>
           </div>
         </div>
@@ -217,7 +218,7 @@
 <!--==============================To DO box================================-->
     <section class="p_rel to_do" id="section4">
       <div class="main1">
-        <h2 class="os bold al_center title1 obj obj1 del1">Что нужно делать?</h2>
+        <h2 class="os bold al_center title1 obj obj1 del1">Что нужно делать дамам?</h2>
         <div class="wrapper">
           <article class="f_left to_do_col to_do_arrow obj obj2 del3">
             <figure class="to_do_img al_center">
@@ -227,29 +228,30 @@
               </figcaption>
             </figure>
             <div class="to_do_description maxheight">
-              Принцип восприятия непредвзято создает паллиативный интеллект, условно. Концепция ментально оспособляет закон внешнего мира. Сомнение раскладывает на элементы неоднозначный структурализм.
+              Придумать и сделать своими руками оригинальный подарок для мужчины на 23 февраля.
             </div>
           </article>
           <article class="f_left to_do_col to_do_arrow obj obj2 del6">
             <figure class="to_do_img al_center">
               <img src="images/todo_img2.png" alt="">
               <figcaption class="os bold to_do_title">
-                Заполните <br> заявку
+                Принять участие в конкурсе
               </figcaption>
             </figure>
             <div class="to_do_description maxheight">
-              Те, кому когда-либо приходилось делать в квартире ремонт, наверное, обращали внимание на старые газеты, наклеенные под обоями. Как правило, пока все статьи не перечитаешь, ничего другого делать не можешь. 
+               Опубликовать фото своей работы в специальной теме конкурса соблюдая все условия и ограничения.
             </div>
           </article>
           <article class="f_left to_do_col obj obj2 del9">
             <figure class="to_do_img al_center">
               <img src="images/todo_img3.png" alt="">
               <figcaption class="os bold to_do_title">
-                Выйграйте <br> призы!
+                Выиграть <br> приз
               </figcaption>
             </figure>
             <div class="to_do_description maxheight">
-              Интересно же — обрывки текста, чья-то жизнь... Так же и с рыбой. Пока заказчик не прочтет всё, он не успокоится. Бывали случаи, когда дизайн принимался именно из-за рыбного текста, который, разумеется, никакого отношения к работе не имел.
+               Удивить жюри и выиграть один из замечательных призов от 
+спонсоров проекта «Подарок настоящему мужчине».
             </div>
           </article>
         </div>
@@ -303,7 +305,7 @@
         <div class="clearfix brand_cols">
           <article class="brand_col f_left brand_col1 obj obj2 del2">
             <figure class="logo_box">
-              <img src="images/prestigio_brand.png" alt="">
+              <a href="http://www.prestigio.ru/ " target="_blank"><img src="images/prestigio_brand.png" alt=""></a>
             </figure>
             <div class="brand_content">
               Prestigio® - это динамичный и быстро развивающийся европейский бренд, представленный 32 офисами и продающийся в 75 странах по всему миру. Prestigio все чаще входит в число самых зарекомендовавших себя брендов на развивающихся рынках региона EMEA (Европа, Ближний Восток и Африка). С 2011 года Prestigio является ведущим брендом в GPS-навигации в Центральной и Восточной Европе, России и странах СНГ, а также неизменно входит в тройку лидеров среди планшетных ПК в регионе.
@@ -311,7 +313,7 @@
           </article>
           <article class="brand_col f_left brand_col2 obj obj1 del4">
             <figure class="logo_box">
-              <img src="images/philips_brand.png" alt="">
+              <a href="http://www.philips.ru/" target="_blank"><img src="images/philips_brand.png" alt=""></a>
             </figure>
             <div class="brand_content">
               Royal Philips — голландская компания с широчайшим ассортиментом технологичных товаров, которые улучшают качество жизни людей благодаря значимым инновациям. Наше производство делится на три основных направления: световые решения, потребительские товары и здравоохранение. Компания занимает лидирующие позиции в разработке оборудования для кардиологии, неотложной помощи и медицинского обслуживания на дому, в области энергоэффективных светотехнических решений и инновационных систем освещения, а также электробритв и средств личной гигиены, приборов и средств для ухода за полостью рта.
@@ -319,7 +321,7 @@
           </article>
           <article class="brand_col f_left brand_col3 obj obj3 del5">
             <figure class="logo_box">
-              <img src="images/asus_brand.png" alt="">
+              <a href="http://www.acer.ru/" target="_blank"><img src="images/asus_brand.png" alt=""></a>
             </figure>
             <div class="brand_content">
               «ВКонтакте» — крупнейшая в Рунете социальная сеть, первый по популярности сайт на территории Белоруссии, второй — в России, Казахстане и на Украине, 24-й — в мире. Ресурс изначально позиционировал себя в качестве социальной сети студентов и выпускников российских вузов, позднее стал называть себя «современным, быстрым и эстетичным способом общения в сети». По данным на январь 2014 года ежедневная аудитория «ВКонтакте» — около 60 миллионов человек.
