--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	 <script src="js/jquery.equalheights.js"></script>
 	 <script src="js/jquery.flexslider.js"></script>
    <script src="js/waypoints.min.js"></script>
-	 <script src="js/script.js"></script>
+	 
 	<!--[if lt IE 7]>
    <div style=' clear: both; text-align:center; position: relative;'>
      <a href="http://windows.microsoft.com/en-US/internet-explorer/products/ie/home?ocid=ie6_countdown_bannercode">
@@ -52,7 +52,7 @@
             </div>
           </div>
         </div>
-        <div class="lt os obj del8 obj1 blue_title">
+        <div class="lt os obj del5 obj1 blue_title">
           <span class="sb special">Мужчины,</span> предложите всем своим дамам заранее задуматься над тем, что они вам подарят!
         </div>
       </div>
@@ -86,15 +86,16 @@
         <div class="main">
           <div class="main_inner">
             <div class="clearfix">
-              <div class="f_left p_top1 dev_col1 obj obj2 del2">
+              <div class="f_left dev_col1 obj obj2 del2">
                 <h3 class="ub bold title2">Prestigio MultiPad PMP7880D3G</h3>
                 <dl class="dev_list">
-                  <dt class="bold">1. Новый стандарт четкости воспроизведения видео.</dt>
-                  <dd>Современный интеллектуальный процессор CinemaPerfect HD снижает шумы и делает </dd>
-                  <dt class="bold">2. Изображение четче, повышая качество воспроизведения.</dt>
-                  <dd>3D-направленные динамики. 3D-направленные акустические системы излучают звук не только перед собой, но и в стороны, расширяя зону наилучшего восприятия, чтобы вы смогли</dd>
-                  <dt class="bold">3. Реалестичный объемный звук.</dt>
-                  <dd>насладиться погружением в реалистичный и объемный звук.Мгновенное преобразование 2D в 3D. Для преобразования в 3D </dd>
+                  <dt class="bold">1. Яркое и четкое изображение.</dt>
+                  <dd>Удобный 7,85-дюймовый IPS-экран с <br> разрешением 1024х768 обладает высокой контрастностью.</dd>
+                  <dt class="bold">2. Высокая производительность.</dt>
+                  <dd>Четырёхъядерный процессор ARM Cortext A7 1.2 ГГц в сочетании с графическим ускорителем PowerVR SGX544 и 1 ГБ оперативной памяти достигается отличное качество воспроизведения мультимедии и ресурсозатратных игр.</dd>
+                  <dt class="bold">3. Быстрая скорость.</dt>
+                  Планшет оснащен полноценным 3G-модулем с высокой скоростью соединения (до 42 Мбит/с <br> для скачивания и до 11 Мбит/с для отдачи) с возможностью совершать звонки и отправлять смс.</dd>
+                  
                 </dl>
               </div>
               <div class="f_left dev_col2  obj obj3 del3">
@@ -104,21 +105,27 @@
                       <img src="images/prestigio1.jpg" alt="">
                     </li>
                     <li>
-                      <img src="images/prestigio1.jpg" alt="">
+                      <img src="images/prestigio2.jpg" alt="">
                     </li>
                     <li>
-                      <img src="images/prestigio1.jpg" alt="">
+                      <img src="images/prestigio3.jpg" alt="">
+                    </li>
+                    <li>
+                      <img src="images/prestigio4.jpg" alt="">
+                    </li>
+                    <li>
+                      <img src="images/prestigio5.jpg" alt="">
                     </li>
                   </ul>
                 </div>
                 <div class="wrapper">
                   <dl class="f_left sm_col1 dev_list">
-                    <dt class="bold">4. Технология анализа 2D-видео</dt>
-                    <dd>Используется самая современная цифровая технология анализа 2D-видео, отделяющая</dd>
+                    <dt class="bold">4. Длительная работа батареи.</dt>
+                    <dd>Мощная батарея 4700 мАч позволяет использовать планшет для своих задач в течение всего дня.</dd>
                   </dl>
                   <dl class="wrapper dev_list">
-                    <dt class="bold">5. Многплановость</dt>
-                    <dd>объекты переднего плана от фонового изображения.</dd>
+                    <dt class="bold">5. Дизайн класса люкс.</dt>
+                    <dd>Оригинальный строгий дизайн ультратонкого алюминиевого корпуса напоминает огранку бриллианта.</dd>
                   </dl>
                 </div>
               </div>
@@ -134,36 +141,36 @@
                 <div class="flexslider ind1" id="slider_2">
                   <ul class="slides">
                     <li>
-                      <img src="images/ceatre.png" alt="">
+                      <img src="images/ceater1.jpg" alt="">
                     </li>
                     <li>
-                      <img src="images/ceatre.png" alt="">
+                      <img src="images/ceater2.jpg" alt="">
                     </li>
                     <li>
-                      <img src="images/ceatre.png" alt="">
+                      <img src="images/ceater3.jpg" alt="">
                     </li>
                   </ul>
                 </div>
                 <div class="wrapper">
                   <dl class="f_left sm_col1 dev_list marker">
-                    <dt class="bold">Длительная работа батареи.</dt>
-                    <dd>Мощная батарея ёмкостью 4700 мАч теперь работает ещё дольше, а возможность подзарядки через microUSB повышает удобство пользования устройством. </dd>
+                    <dt class="bold">4. Поддержка Skypе.</dt>
+                    <dd>Просто подключите специальную Skype™-камеру к домашнему кинотеатру и наслаждайтесь видео HD-разрешения.</dd>
                   </dl>
                   <dl class="wrapper dev_list marker">
-                    <dt class="bold">Дизайн класса люкс.</dt>
-                    <dd>Оригинальный строгий дизайн ультратонкого алюминиевого корпуса и эрогомичные характеристики веса.</dd>
+                    <dt class="bold">5. Беспроводные акустические системы.</dt>
+                    <dd>Созданы с использованием технологии защиты от помех и обеспечивают объемный звук без мотков проводов.</dd>
                   </dl>
                 </div>
               </div>
               <div class="f_left p_top2 dev_col3  obj obj3 del9">
                 <h3 class="ub bold title2 t_ind">Домашний кинотеатр HTB7590</h3>
                 <dl class="dev_list marker">
-                  <dt class="bold">Яркое и четкое изображение.</dt>
-                  <dd>Удобный 7,85-дюймовый IPS-экран с высокой контрастностью и чётким различием цветов. Оснащён большим экраном с разрешением 1024х768 пикселей. </dd>
-                  <dt class="bold">Высокая производительность.</dt>
-                  <dd>Четырёхъядерный процессор ARM Cortext A7 1.2 ГГц на базе чипсета MediaTekMT8389. Сочетанием графической карты PowerVR SGX544 и 1 ГБ оперативной памяти достигается отличное качество воспроизведения мультимедийного контента и ресурсозатратных игр.</dd>
-                  <dt class="bold">Быстрое подключение.</dt>
-                  <dd>Благодаря наличию 3G-модуля с высокой скоростью соединения (до 42 Мбит/с для скачивания и до 11 Мбит/с для отдачи). Установив в планшет SIM-карту с него можно звонить и отправлять SMS-сообщения.</dd>
+                  <dt class="bold">1. Сверхчеткое воспроизведение видео.</dt>
+                  <dd>Интеллектуальный процессор CinemaPerfect HD снижает шумы и делает изображение четче.</dd>
+                  <dt class="bold">2. 3D-направленные динамики.</dt>
+                  <dd>Динамики излучают звук не только перед собой, но и в стороны, расширяя зону наилучшего восприятия, чтобы вы смогли насладиться погружением в реалистичный и объемный звук.</dd>
+                  <dt class="bold">3. Мгновенное преобразование 2D в 3D.</dt>
+                  <dd>Цифровая технология анализа 2D-видео отедляет объекты переднего плана от фонового изображения.</dd>
                 </dl>
               </div>
             </div>
@@ -177,36 +184,33 @@
               <div class="f_left dev_col1 obj obj1 del16">
                 <h3 class="ub bold t_ind title2">Asus G46VW</h3>
                 <dl class="dev_list marker">
-                  <dt class="bold">Яркое и четкое изображение.</dt>
-                  <dd>Удобный 7,85-дюймовый IPS-экран с высокой контрастностью и чётким различием цветов. Оснащён большим экраном с разрешением 1024х768 пикселей. </dd>
-                  <dt class="bold">Высокая производительность.</dt>
-                  <dd>Четырёхъядерный процессор ARM Cortext A7 1.2 ГГц на базе чипсета MediaTekMT8389. Сочетанием графической карты PowerVR SGX544 и 1 ГБ оперативной памяти достигается отличное качество воспроизведения мультимедийного контента и ресурсозатратных игр. </dd>
-                  <dt class="bold">Быстрое подключение.</dt>
-                  <dd>Благодаря наличию 3G-модуля с высокой скоростью соединения (до 42 Мбит/с для скачивания и до 11 Мбит/с для отдачи). <br> Установив в планшет SIM-карту с него можно звонить и отправлять SMS-сообщения. </dd>
+                  <dt class="bold">Превосходная функциональность.</dt>
+                  <dd>Предлагают проверенные временем технологии, которые обеспечивают высокую производительность, развлечения и возможности для общения. </dd>
+                  <dt class="bold">Тонкий.</dt>
+                  <dd>Оснащены DVD-приводом, но при этом толщина их корпуса составляет всего 33 мм</dd>
+                  <dt class="bold"> Все для развлечений.</dt>
+                  <dd>Фильмы и видео отлично смотрятся на светодиодном дисплее формата Full HD а дискретная графическая плата обеспечивают четкое и контрастное изображение для всех мультимедийных файлов.</dd>
                 </dl>
               </div>
               <div class="f_left dev_col2 obj obj1 del18">
                 <div class="flexslider" id="slider_3">
                   <ul class="slides">
                     <li>
-                      <img src="images/asus.png" alt="">
+                      <img src="images/asus1.jpg" alt="">
                     </li>
                     <li>
-                      <img src="images/asus.png" alt="">
-                    </li>
-                    <li>
-                      <img src="images/asus.png" alt="">
+                      <img src="images/asus2.jpg" alt="">
                     </li>
                   </ul>
                 </div>
                 <div class="wrapper">
                   <dl class="f_left sm_col1 dev_list marker">
-                    <dt class="bold">Длительная работа батареи.</dt>
-                    <dd>Мощная батарея ёмкостью 4700 мАч теперь работает ещё дольше, а возможность подзарядки через microUSB.</dd>
+                    <dt class="bold">Надежное хранение.</dt>
+                    <dd>Оснащены оптическим приводом с поддержкой M-DISC™, который обеспечивает бережное хранение важных данных.</dd>
                   </dl>
                   <dl class="wrapper dev_list marker">
-                    <dt class="bold">Дизайн класса люкс.</dt>
-                    <dd>Оригинальный строгий дизайн ультратонкого алюминиевого корпуса и эрогомичные характеристики веса.</dd>
+                    <dt class="bold">5. Мощность.</dt>
+                    <dd>Оснащены новейшими процессорами и дискретными графическими платами, которые позволяют справиться со всеми повседневными задачами.</dd>
                   </dl>
                 </div>
               </div>
@@ -308,7 +312,7 @@
               <a href="http://www.prestigio.ru/ " target="_blank"><img src="images/prestigio_brand.png" alt=""></a>
             </figure>
             <div class="brand_content">
-              Prestigio® - это динамичный и быстро развивающийся европейский бренд, представленный 32 офисами и продающийся в 75 странах по всему миру. Prestigio все чаще входит в число самых зарекомендовавших себя брендов на развивающихся рынках региона EMEA (Европа, Ближний Восток и Африка). С 2011 года Prestigio является ведущим брендом в GPS-навигации в Центральной и Восточной Европе, России и странах СНГ, а также неизменно входит в тройку лидеров среди планшетных ПК в регионе.
+              Prestigio - это динамичный и быстро развивающийся европейский бренд, представленный 32 офисами и продающийся в 75 странах по всему миру. Prestigio все чаще входит в число зарекомендовавших себя брендов на развивающихся рынках региона EMEA (Европа, Ближний Восток и Африка). С 2011 года Prestigio является ведущим брендом в GPS-навигации в Центральной и Восточной Европе, России и странах СНГ, а также неизменно входит в тройку лидеров среди планшетных ПК в регионе.
             </div>
           </article>
           <article class="brand_col f_left brand_col2 obj obj1 del4">
@@ -316,7 +320,7 @@
               <a href="http://www.philips.ru/" target="_blank"><img src="images/philips_brand.png" alt=""></a>
             </figure>
             <div class="brand_content">
-              Royal Philips — голландская компания с широчайшим ассортиментом технологичных товаров, которые улучшают качество жизни людей благодаря значимым инновациям. Наше производство делится на три основных направления: световые решения, потребительские товары и здравоохранение. Компания занимает лидирующие позиции в разработке оборудования для кардиологии, неотложной помощи и медицинского обслуживания на дому, в области энергоэффективных светотехнических решений и инновационных систем освещения, а также электробритв и средств личной гигиены, приборов и средств для ухода за полостью рта.
+              WOOX Innovations разрабатывает инновации в сфере «подключенных развлечений». Высокое качество звука, передовые технологии и утонченный дизайн – главные инструменты для того, чтобы удовлетворить и превзойти ожидания покупателей. С головным офисов в Гонконге и более 2 000 сотрудниками по всему миру, WOOX Innovations разрабатывает и продвигает продукцию под торговой маркой Philips в категориях аудио, видео, мультимедиа и аксессуаров по всему миру. WOOX Innovations является дочерней компанией Royal Philips N.V
             </div>
           </article>
           <article class="brand_col f_left brand_col3 obj obj3 del5">
@@ -324,7 +328,7 @@
               <a href="http://www.acer.ru/" target="_blank"><img src="images/asus_brand.png" alt=""></a>
             </figure>
             <div class="brand_content">
-              «ВКонтакте» — крупнейшая в Рунете социальная сеть, первый по популярности сайт на территории Белоруссии, второй — в России, Казахстане и на Украине, 24-й — в мире. Ресурс изначально позиционировал себя в качестве социальной сети студентов и выпускников российских вузов, позднее стал называть себя «современным, быстрым и эстетичным способом общения в сети». По данным на январь 2014 года ежедневная аудитория «ВКонтакте» — около 60 миллионов человек.
+              Компания Acer специализируется на исследовании, дизайне, маркетинге, продажах и технической поддержке инновационных продуктов, призванных улучшать жизнь людей. Зеленая цепочка поставок Acer предоставляет дружественные по отношению к окружающей среде ПК, ноутбуки, дисплеи, проекторы, серверы, планшеты и смартфоны. Acer занимает третье место в мире по поставкам ноутбуков (согласно данным агентства IDC за 2012 год). Корпорация Acer насчитывает 8 000 сотрудников по всему миру. Её выручка за 2011 год составила 15,7 млрд. долларов США.
             </div>
           </article>
         </div>
@@ -333,5 +337,6 @@
         </div>
       </div>
     </section>
+    <script src="js/script.js"></script>
 </body>
 </html>
