--- a/index.html
+++ b/index.html
@@ -48,9 +48,25 @@
               <!-- <div class="gif">
                 Место под ГИФ
               </div> -->
-              <h3 class="ub bold title2 gif_title">Prestigio MultiPad PMP7880D3G</h3>
+              <div class="flexslider" id="slider_4">
+                <ul class="slides">
+                  <li>
+                    <img src="images/prestigio6.jpg" alt="">
+                    <h3 class="ub bold title2 gif_title">Prestigio MultiPad PMP7880D3G</h3>
+                  </li>
+                  <li>
+                    <img src="images/prestigio6.jpg" alt="">
+                  </li>
+                  <li>
+                    <img src="images/prestigio6.jpg" alt="">
+                  </li>
+                </ul>
+              </div>
             </div>
           </div>
+          <a href="http://www.philips.ru/" target="_blank" class="d_block p_abs prestigio_link"></a>
+          <a href="http://www.acer.ru/" target="_blank" class="d_block p_abs philips_link"></a>
+          <a href="http://www.prestigio.ru/" target="_blank" class="d_block p_abs asus_link"></a>
         </div>
         <div class="lt os obj del5 obj1 blue_title">
           <span class="sb special">Мужчины,</span> предложите всем своим дамам заранее задуматься над тем, что они вам подарят!
@@ -137,7 +153,18 @@
         <div class="main">
           <div class="main_inner">
             <div class="clearfix">
-              <div class="f_left dev_col2  obj obj3 del8">
+              <div class="f_left dev_col1 obj obj3 del8">
+                <h3 class="ub bold title2 t_ind">Домашний кинотеатр HTB7590</h3>
+                <dl class="dev_list marker">
+                  <dt class="bold">1. Сверхчеткое воспроизведение видео.</dt>
+                  <dd>Интеллектуальный процессор CinemaPerfect HD снижает шумы и делает изображение четче.</dd>
+                  <dt class="bold">2. 3D-направленные динамики.</dt>
+                  <dd>Динамики излучают звук не только перед собой, но и в стороны, расширяя зону наилучшего восприятия, чтобы вы смогли насладиться погружением в реалистичный и объемный звук.</dd>
+                  <dt class="bold">3. Мгновенное преобразование 2D в 3D.</dt>
+                  <dd>Цифровая технология анализа 2D-видео отедляет объекты переднего плана от фонового изображения.</dd>
+                </dl>
+              </div>
+              <div class="f_left p_top2 dev_col2  obj obj3 del9">
                 <div class="flexslider ind1" id="slider_2">
                   <ul class="slides">
                     <li>
@@ -161,17 +188,6 @@
                     <dd>Созданы с использованием технологии защиты от помех и обеспечивают объемный звук без мотков проводов.</dd>
                   </dl>
                 </div>
-              </div>
-              <div class="f_left p_top2 dev_col3  obj obj3 del9">
-                <h3 class="ub bold title2 t_ind">Домашний кинотеатр HTB7590</h3>
-                <dl class="dev_list marker">
-                  <dt class="bold">1. Сверхчеткое воспроизведение видео.</dt>
-                  <dd>Интеллектуальный процессор CinemaPerfect HD снижает шумы и делает изображение четче.</dd>
-                  <dt class="bold">2. 3D-направленные динамики.</dt>
-                  <dd>Динамики излучают звук не только перед собой, но и в стороны, расширяя зону наилучшего восприятия, чтобы вы смогли насладиться погружением в реалистичный и объемный звук.</dd>
-                  <dt class="bold">3. Мгновенное преобразование 2D в 3D.</dt>
-                  <dd>Цифровая технология анализа 2D-видео отедляет объекты переднего плана от фонового изображения.</dd>
-                </dl>
               </div>
             </div>
           </div>
@@ -243,7 +259,7 @@
               </figcaption>
             </figure>
             <div class="to_do_description maxheight">
-               Опубликовать фото своей работы в специальной теме конкурса соблюдая все условия и ограничения.
+               Опубликовать фото своей работы в <a href="#" class="link">специальной теме конкурса</a> соблюдая все условия и ограничения.
             </div>
           </article>
           <article class="f_left to_do_col obj obj2 del9">
