--- a/index.html
+++ b/index.html
@@ -6,12 +6,15 @@
     <meta charset="utf-8">
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
+    <meta name="viewport" content="width=980">
     <link rel="stylesheet" type="text/css" media="screen" href="css/style.css">
     <script src="js/jquery.js"></script>
     <script src="js/jquery-migrate-1.2.1.js"></script>
 	 <script src="js/jquery.equalheights.js"></script>
 	 <script src="js/jquery.flexslider.js"></script>
    <script src="js/waypoints.min.js"></script>
+   <script src="js/countdown.js"></script>
+   <script src="js/script.js"></script>
 	 
 	<!--[if lt IE 7]>
    <div style=' clear: both; text-align:center; position: relative;'>
@@ -89,7 +92,7 @@
           <div class="white_bg timer obj obj2 del7">
             <h2 class="os sb timer_title">До конца конкурса осталось:</h2>
             <div class="countdown">
-              <script type="text/javascript" src="http://timegenerator.ru/s/923598eab24d094ae916a62c4aeb1a4f.js"></script>
+              <script>timer();</script>
             </div>
           </div>
 
@@ -299,18 +302,18 @@
               <p>Максимальное количество предоставленных работ от одного участника – 2.</p> 
               Работы, несоответствующие нормам морали и этики в конкурсе не участвуют и будут удалены Модераторами.
             </dd>
-            <dt class="os sb rule_icon rule_icon2 obj obj1 del13">
+            <dt class="os sb rule_icon rule_icon2 obj obj1 del10">
               Условия участия
             </dt>
-            <dd class=" obj obj2 del13">
+            <dd class=" obj obj2 del11">
              <p> В конкурсе могут принять участие пользователи, проживающие в России или странах СНГ. </p>
               <p>В конкурсе может принять участие женская половина пользователей 4pda или жены, сестры, девушки, дочки или мамы пользователей, аккаунты которых были зарегистрированы до начала конкурса.</p> 
               Победителей конкурса отберет жюри в составе представителей компаний xxx, xxx, xxx и Администрации 4pda. 
             </dd>
-            <dt class="os sb rule_icon rule_icon3 obj obj2 del21">
+            <dt class="os sb rule_icon rule_icon3 obj obj2 del16">
               Сроки проведения
             </dt>
-            <dd class="obj obj2 del22">
+            <dd class="obj obj2 del17">
               <p>Конкурс стартует 17 февраля 2014 года.</p>
               <p>Конкурсные работы принимаются до 12:00 по московскому времени 24 февраля 2014 года.</p> 
               Итоги конкурса будут подведены и опубликованы в течене 2 дней после окончания конкурса на сайте 4pda.»
@@ -353,6 +356,6 @@
         </div>
       </div>
     </section>
-    <script src="js/script.js"></script>
+    
 </body>
 </html>
