--- a/index.html
+++ b/index.html
@@ -54,22 +54,24 @@
               <div class="flexslider" id="slider_4">
                 <ul class="slides">
                   <li>
-                    <img src="images/prestigio6.jpg" alt="">
+                    <img src="images/slide1.png" alt="">
                     <h3 class="ub bold title2 gif_title">Prestigio MultiPad PMP7880D3G</h3>
                   </li>
                   <li>
-                    <img src="images/prestigio6.jpg" alt="">
+                    <img src="images/slide2.png" alt="">
+                    <h3 class="ub bold title2 gif_title">Домашний кинотеатр HTB7590</h3>
                   </li>
                   <li>
-                    <img src="images/prestigio6.jpg" alt="">
+                    <img src="images/slide3.png" alt="">
+                    <h3 class="ub bold title2 gif_title">Ноутбук <br> Acer Aspire E</h3>
                   </li>
                 </ul>
               </div>
             </div>
           </div>
-          <a href="http://www.philips.ru/" target="_blank" class="d_block p_abs prestigio_link"></a>
-          <a href="http://www.acer.ru/" target="_blank" class="d_block p_abs philips_link"></a>
-          <a href="http://www.prestigio.ru/" target="_blank" class="d_block p_abs asus_link"></a>
+          <a href="http://www.prestigio.ru/" target="_blank" class="d_block p_abs prestigio_link"></a>
+          <a href="http://www.philips.ru/" target="_blank" class="d_block p_abs philips_link"></a>
+          <a href="http://www.acer.ru/" target="_blank" class="d_block p_abs asus_link"></a>
         </div>
         <div class="lt os obj del5 obj1 blue_title">
           <span class="sb special">Мужчины,</span> предложите всем своим дамам заранее задуматься над тем, что они вам подарят!
@@ -113,7 +115,7 @@
                   <dt class="bold">2. Высокая производительность.</dt>
                   <dd>Четырёхъядерный процессор ARM Cortext A7 1.2 ГГц в сочетании с графическим ускорителем PowerVR SGX544 и 1 ГБ оперативной памяти достигается отличное качество воспроизведения мультимедии и ресурсозатратных игр.</dd>
                   <dt class="bold">3. Быстрая скорость.</dt>
-                  Планшет оснащен полноценным 3G-модулем с высокой скоростью соединения (до 42 Мбит/с <br> для скачивания и до 11 Мбит/с для отдачи) с возможностью совершать звонки и отправлять смс.</dd>
+                  <dd>Планшет оснащен полноценным 3G-модулем с высокой скоростью соединения (до 42 Мбит/с <br> для скачивания и до 11 Мбит/с для отдачи) с возможностью совершать звонки и отправлять смс.</dd>
                   
                 </dl>
               </div>
