--- a/index.html
+++ b/index.html
@@ -132,9 +132,6 @@
                       <img src="images/prestigio3.jpg" alt="">
                     </li>
                     <li>
-                      <img src="images/prestigio4.jpg" alt="">
-                    </li>
-                    <li>
                       <img src="images/prestigio5.jpg" alt="">
                     </li>
                   </ul>
@@ -181,6 +178,9 @@
                     <li>
                       <img src="images/ceater3.jpg" alt="">
                     </li>
+                    <li>
+                      <img src="images/ceater4.jpg" alt="">
+                    </li>
                   </ul>
                 </div>
                 <div class="wrapper">
@@ -217,10 +217,19 @@
                 <div class="flexslider" id="slider_3">
                   <ul class="slides">
                     <li>
-                      <img src="images/asus1.jpg" alt="">
+                      <img src="images/acer1.jpg" alt="">
                     </li>
                     <li>
-                      <img src="images/asus2.jpg" alt="">
+                      <img src="images/acer2.jpg" alt="">
+                    </li>
+                    <li>
+                      <img src="images/acer3.jpg" alt="">
+                    </li>
+                    <li>
+                      <img src="images/acer4.jpg" alt="">
+                    </li>
+                    <li>
+                      <img src="images/acer5.jpg" alt="">
                     </li>
                   </ul>
                 </div>
